# Mapperatorinator

./: .gitignore  CHANGELOG.md  Dockerfile  EMAIL_TO_DEVELOPER.md  README.md  audio_fingerprint.py  calc_fid.py  cli_inference.sh  collate_results.py  config.py  filename_utils.py  inference.py  mai_mod.py  mai_mod_ui.py  mapper_api.py  mapper_scrape.py  pyproject.toml  requirements.txt  run_calc_fid_all.ps1  web-ui.py
.devcontainer/: devcontainer.json
colab/: mai_mod_inference.ipynb  mapperatorinator_inference.ipynb
configs/: calc_fid.yaml  inference_tiny_dist.yaml  inference_v30.yaml
configs/inference/: default.yaml  tiny23.yaml  tiny24.yaml  tiny25.yaml  tiny26.yaml  tiny27.yaml  tiny28.yaml  tiny29.yaml  tiny30.yaml  tiny31.yaml  tiny32.yaml  tiny33.yaml  tiny34.yaml  tiny35.yaml  tiny36.yaml  tiny37.yaml  tiny38.yaml  tiny39.yaml  tiny40.yaml  tiny41.yaml  tiny42.yaml  tiny43.yaml  tiny44.yaml  tiny45.yaml  tiny46.yaml  tiny47.yaml  tiny48.yaml  tiny49.yaml  tiny50.yaml  tiny51.yaml  tiny52.yaml  tiny53.yaml  tiny54.yaml  tiny55.yaml  tiny57m.yaml  tiny58m.yaml  tiny59.yaml  tiny60.yaml  tiny61.yaml  tiny62.yaml  (+7 more)
configs/legacy/: train_timer_v24.yaml  train_v1.1.yaml  train_v10.yaml  train_v10_gd.yaml  train_v11.yaml  train_v12.yaml  (+12 more)
datasets/: removed_users.txt
osuT5/: dataloading.py  multi_train.sh  test.py  train.py
osuT5-2/: dataloading.py  requirements.txt  train.py
static/: app.js  i18n.js  queue_manager.js  style.css
template/: index.html
training/: README.md  build_dataset.py  download_beatmaps.py  run_pipeline.ps1  run_pipeline.sh
(+141 files in other folders)
