[project]
name = "mapperatorinator"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "accelerate==1.12.0",
    "pydub==0.25.1",
    "nnAudio==0.3.4",
    "PyYAML==6.0.3",
    "transformers==4.57.3",
    "hydra-core==1.3.2",
    "tensorboard==2.20.0",
    "torch_tb_profiler==0.4.3",
    "wandb==0.23.1",
    "matplotlib==3.10.8",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "einops==0.8.1",
    "lightning==2.6.0",
    "pywebview[qt]==6.1",
    "pyqtwebengine==5.15.7; sys_platform != 'win32'",
    "flask==3.1.2",
    "audioop-lts; python_version>='3.13'",
    "rich==14.2.0",
    "peft==0.18.1",
    "slider",
]

[tool.uv.sources]
slider = { git = "https://github.com/OliBomby/slider.git", rev = "gedagedigedagedaoh" }
# Optional: pin PyTorch packages to the CUDA wheel index (used only when installing torch/torchaudio).
# See README for the recommended post-`uv sync` install command.
torch = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
